--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@ body {
 }
 
 h2 {
-    font-size: 5rem;
+    font-size: 7rem;
     text-align: center;
-    margin-top: 20%;
     margin-bottom: 2%;
 }
 
 h1 {
-    font-size: 11rem;
+    font-size: 8rem;
+    margin: 5% 15%;
     text-align: center;
 }
 
