--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,53 @@
+/*
+breakpoints: 
+xs: 0px
+sm: 640px
+md: 768px
+lg: 1024px
+xl: 1280px
+2xl: 1536px
+*/
+
+html {
+	scroll-behavior: smooth;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
-    color: white;
-    font-family: 'Inter';
+	margin: 0;
+	padding: 0;
+	background-color: black;
+	color: white;
+	font-family: "Inter";
 }
 
 h2 {
-    font-size: 7rem;
-    text-align: center;
-    margin-bottom: 2%;
+	font-size: 7rem;
+	text-align: center;
+	margin-bottom: 2%;
 }
 
 h1 {
-    font-size: 8rem;
-    margin: 5% 15%;
-    text-align: center;
+	font-size: 8rem;
+	margin: 5% 15%;
+	text-align: center;
 }
 
-@media screen and (max-width:450px) {
-    h1 {
-        font-size: 4rem;
-    }
+/* @media screen and (max-width: 640px) {
+	h1 {
+		font-size: 4rem;
+	}
 
-    h2 {
-        font-size: 2.5rem;
-    }
-    
+	h2 {
+		font-size: 2.5rem;
+	}
+} */
+
+@media screen and (max-width: 640px) {
+	h1 {
+		font-size: 3rem;
+	}
+
+	h2 {
+		font-size: 2rem;
+	}
 }
