--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -8,9 +8,9 @@
     width: 50%;
 }
 
-@media screen and (max-width:450px) {
+/* @media screen and (max-width:450px) {
     .work-image img {
         width: 100%;
     }
     
-}
+} */
