--- a/src/App.css
+++ b/src/App.css
@@ -21,33 +21,38 @@ body {
 }
 
 h2 {
-	font-size: 7rem;
+	font-size: 7em;
 	text-align: center;
 	margin-bottom: 2%;
 }
 
 h1 {
-	font-size: 8rem;
+	font-size: 8em;
 	margin: 5% 15%;
 	text-align: center;
 }
 
-/* @media screen and (max-width: 640px) {
+@media screen and (max-width: 1024px) {
 	h1 {
-		font-size: 4rem;
+		font-size: 3em;
 	}
 
 	h2 {
-		font-size: 2.5rem;
+		font-size: 2em;
 	}
-} */
+}
 
-@media screen and (max-width: 640px) {
-	h1 {
-		font-size: 3rem;
+@keyframes hover-image {
+	from {
+		transform: scale(1);
 	}
+	to {
+		transform: scale(1.05);
+	}
+}
 
-	h2 {
-		font-size: 2rem;
-	}
+img:hover {
+	animation-name: hover-image;
+	animation-duration: 1s;
+	animation-fill-mode: backwards;
 }
